--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <!--grupoCSS-->
 <link rel="stylesheet" href="css/app6tema.min.css"/>
-<link rel="stylesheet" href="themes/jquery.mobile.icons-1.4.5.min.css"/>
+<link rel="stylesheet" href="css/jquery.mobile.icons-1.4.5.min.css"/>
 <link rel="stylesheet" href="css/jquery.mobile.structure-1.4.5.min.css"/>
 
 <!--grupo JavaScript-->
